@@ -2,7 +2,7 @@
 	dojoAttachEvent="onclick:_onButtonClick,onmouseover:_onMouse,onmouseout:_onMouse,onmousedown:_onMouse"
 	><div class='dijitRight'
 	><button class="dijitStretch dijitButtonNode dijitButtonContents" dojoAttachPoint="focusNode,titleNode"
-		tabIndex="${tabIndex}" type="${type}" id="${id}" name="${name}" waiRole="button" waiState="labelledby-${id}_label"
+		type="${type}" waiRole="button" waiState="labelledby-${id}_label"
 		><div class="dijitInline ${iconClass}"></div
 		><span class="dijitButtonText" id="${id}_label" dojoAttachPoint="containerNode">${label}</span
 	></button
