@@ -1,5 +1,5 @@
-<table class='dijit dijitReset dijitInline dijitLeft dijitComboButton'  baseClass='dijitComboButton'
-	id="${id}" name="${name}" cellspacing='0' cellpadding='0'
+<table class='dijit dijitReset dijitInline dijitLeft dijitComboButton' baseClass='dijitComboButton'
+	cellspacing='0' cellpadding='0'
 	dojoAttachEvent="onmouseover:_onMouse,onmouseout:_onMouse,onmousedown:_onMouse">
 	<tr>
 		<td	class="dijitStretch dijitButtonContents dijitButtonNode"
@@ -14,7 +14,6 @@
 			dojoAttachEvent="ondijitclick:_onArrowClick, onkeypress:_onKey"
 			baseClass="dijitComboButtonDownArrow"
 			title="${optionsTitle}"
-			tabIndex="${tabIndex}"
 			waiRole="button" waiState="haspopup-true"
 		><div waiRole="presentation">&#9660;</div>
 	</td></tr>
