@@ -5,8 +5,7 @@
 	<tr class="dijitReset">
 		<td rowspan="2" class="dijitReset dijitStretch dijitInputField" dojoAttachPoint="nodeWithBorder">
 			<input dojoAttachPoint="textbox,focusNode" type="${type}" dojoAttachEvent="onfocus,onkeyup"
-				name="${name}" size="${size}" maxlength="${maxlength}"
-				waiRole="spinbutton" autocomplete="off" tabIndex="${tabIndex}" id="${id}"
+				waiRole="spinbutton" autocomplete="off"
 			/></td>
 		<td class="dijitReset dijitRight dijitButtonNode dijitUpArrowButton"
 				dojoAttachPoint="upArrowNode"
